
* GITHUB#12305: Minor cleanup and improvements to DaciukMihovAutomatonBuilder. (Greg Miller)

* GITHUB#12325: Parallelize AbstractKnnVectorQuery rewrite across slices rather than segments. (Luca Cavanna)

* GITHUB#12333: NumericLeafComparator#competitiveIterator makes better use of a "search after" value when paginating.
  (Chaitanya Gohel)

Optimizations
---------------------

* GITHUB#12270 Don't generate stacktrace in CollectionTerminatedException. (Armin Braun)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

* GITHUB#12286 Toposort use iterator to avoid stackoverflow. (Tang Donghai)

* GITHUB#12235: Optimize HNSW diversity calculation. (Patrick Zhai)

* GITHUB#12328: Optimize ConjunctionDISI.createConjunction (Armin Braun)

Bug Fixes
---------------------

* GITHUB#12291: Skip blank lines from stopwords list. (Jerry Chin)

Other
---------------------
(No changes)

======================== Lucene 9.6.0 =======================

API Changes
---------------------

* GITHUB#12116: Introduce IndexableField#storedValue() to expose the value that
  should be stored to IndexingChain without needing to guess the field's type.
  (Adrien Grand, Robert Muir)

* GITHUB#12129: Move DocValuesTermsQuery from sandbox to SortedDocValuesField#newSlowSetQuery
  and SortedSetDocValuesField#newSlowSetQuery. (Robert Muir)

* GITHUB#12173: TermInSetQuery#getTermData has been deprecated. This exposes internal implementation details that we
  may want to change in the future, and users shouldn't rely on the encoding directly. (Greg Miller)

* GITHUB#11746: Deprecate LongValueFacetCounts#getTopChildrenSortByCount. (Greg Miller)

New Features
---------------------

* GITHUB#12054: Introduce a new KeywordField for simple and efficient
  filtering, sorting and faceting. (Adrien Grand)

* GITHUB#12188: Add support for Java 20 foreign memory API. If exactly Java 19
  or 20 is used, MMapDirectory will mmap Lucene indexes in chunks of 16 GiB